# -2026-TaiwanCup-Rocket-Ground-Station

./: .gitignore  AGENTS.md  CODEX_HANDOFF.md  README.md  package_ground_station.ps1
artifacts/: GroundStation_0.1.0_Portable_2026-07-16_125046.json  GroundStation_0.1.0_Portable_2026-07-16_224309.json  GroundStation_0.1.0_Portable_2026-07-16_225044.json  GroundStation_0.1.0_Portable_2026-07-17_143222.json  GroundStation_0.1.0_Portable_2026-07-17_191331.json  GroundStation_0.1.0_Portable_2026-07-17_204426.json  GroundStation_0.1.0_Portable_2026-07-17_220122.json  GroundStation_0.1.0_Portable_2026-07-19_200555.json  GroundStation_0.1.0_Portable_2026-07-19_201542.json  GroundStation_0.1.0_Portable_2026-07-20_023341.json  GroundStation_0.1.1_Portable_2026-07-20_212914.json  GroundStation_0.1.1_Portable_2026-07-20_212914.sha256  GroundStation_0.1.2_Portable_2026-07-20_224303.json  GroundStation_0.1.2_Portable_2026-07-20_224303.sha256  GroundStation_0.1.3_Portable_2026-07-20_230808.json  GroundStation_0.1.3_Portable_2026-07-20_230808.sha256  LATEST.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_test_runs_and_reliable_telemetry.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: serial.rs
src-tauri/src/infrastructures/: flight.rs  mod.rs
src-tauri/src/infrastructures/serial/: command.rs  mod.rs  parser.rs  receiver.rs
src-tauri/src/models/: mod.rs  response.rs
src-tauri/src/services/: mod.rs  notify.rs  serial.rs
src-tauri/src/state/: mod.rs  serial_state.rs  storage_state.rs
src-ui/: index.html  (+3 more)
(+41 files in other folders)
