[package]
name = "app"
version = "0.1.0"
description = "五限可能 2026 TaiwanCup Rocket 地面站監控程式"
authors = ["TaiwanCup Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls", "migrate"] }
tokio-serial = "5.4.5"
uuid = { version = "1.23.5", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
